--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,15 @@
 
     <properties>
         <cglib.version>3.2.4</cglib.version>
+        <guava.version>21.0</guava.version>
+        <junit.version>4.12</junit.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>21.0</version>
+            <version>${guava.version}</version>
         </dependency>
         <dependency>
             <groupId>cglib</groupId>
@@ -27,7 +29,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>${junit.version}</version>
         </dependency>
     </dependencies>
 
