--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <fastjson.version>1.2.57</fastjson.version>
         <common.version>2.6</common.version>
         <commons.collections.version>3.2.2</commons.collections.version>
+        <asm.version>5.2</asm.version>
+        <javassist.version>3.25.0-GA</javassist.version>
     </properties>
 
     <dependencies>
@@ -57,7 +59,12 @@
         <dependency>
             <groupId>org.ow2.asm</groupId>
             <artifactId>asm-all</artifactId>
-            <version>5.2</version>
+            <version>${asm.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>${javassist.version}</version>
         </dependency>
     </dependencies>
 
